fixed small issues in code/2-html cleaned up code/3-stereo finish a first version of part3 of the tutorial changed the CSS to remove extra space around inlined code elements

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -158,7 +158,7 @@ pre {
   font-family: Menlo, Monaco, "Courier New", monospace;
 }
 code {
-  padding: .25em .5em;
+  padding: .25em 0;
   font-size: 85%;
   color: #bf616a;
   background-color: #f9f9f9;
